--- a/Buck.Samples.AspNet/Pages/Shared/_Layout.cshtml
+++ b/Buck.Samples.AspNet/Pages/Shared/_Layout.cshtml
@@ -28,7 +28,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Animal" asp-route-id="cat">Cats</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Animal" asp-route-id="hamster">Hamsters</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Animal" asp-route-id="horse">Horses</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Vehicle" asp-route-id="car">Cars</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Vehicle" asp-route-id="horse">Horses</a>
                         </li>
                     </ul>
                 </div>
