Fixed names of documents.

--- a/Buck.Samples.AspNet/Pages/Animal.cshtml
+++ b/Buck.Samples.AspNet/Pages/Animal.cshtml
@@ -5,7 +5,7 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Loading from cache or repository where there are @Model.Variant variants...</p>
+<p>Loading from animal cache or repository where there are @Model.Variant variants...</p>
 
 <p><b>Cache Response Type:</b> @Model.CacheResponse.ResponseType</p>
 <p><b>Cache Response Time:</b> @Model.CacheResponse.ResponseTime</p>
