--- a/Buck.Samples.AspNet/Pages/Vehicle.cshtml
+++ b/Buck.Samples.AspNet/Pages/Vehicle.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
 @model AnimalModel
 @{
-    ViewData["Title"] = "Animals (" + Model.Variant +"s)";
+    ViewData["Title"] = "Vehicles (" + Model.Variant +"s)";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Loading from cache or repository where there are @Model.Variant variants...</p>
+<p>Loading from vehicle cache or repository where there are @Model.Variant variants...</p>
 
 <p><b>Cache Response Type:</b> @Model.CacheResponse.ResponseType</p>
 <p><b>Cache Response Time:</b> @Model.CacheResponse.ResponseTime</p>
