--- a/Capper.Samples.AspNet/Pages/Vehicle.cshtml
+++ b/Capper.Samples.AspNet/Pages/Vehicle.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
 @model VehicleModel
 @{
-    ViewData["Title"] = "Vehicles (" + Model.Variant +"s)";
+    ViewData["Title"] = "Vehicles (" + Model.CacheResponse.Key + "s)";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Loading from vehicle cache or repository where there are @Model.Variant variants...</p>
+<p>Loading from vehicle cache or repository where there are @Model.CacheResponse.Key variants...</p>
 
 <p><b>Cache Response Type:</b> @Model.CacheResponse.ResponseType</p>
 <p><b>Cache Response Time:</b> @Model.CacheResponse.ResponseTime</p>
