Changed text on home.

--- a/Capper.Samples.AspNet/Pages/Index.cshtml
+++ b/Capper.Samples.AspNet/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Select an animal above to read it through a cache.</p>
+    <p>Select an entity variant above to read it through a cache.</p>
 </div>
