Added menu items

--- a/Capper.Samples.AspNetFSharp/Views/Shared/_Layout.cshtml
+++ b/Capper.Samples.AspNetFSharp/Views/Shared/_Layout.cshtml
@@ -23,7 +23,19 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Animal" asp-route-id="dog">Dogs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Animal" asp-route-id="cat">Cats</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Animal" asp-route-id="horse">Horses</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Vehicle" asp-route-id="car">Cars</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Vehicle" asp-route-id="horse">Horses</a>
                         </li>
                     </ul>
                 </div>
