--- a/Capper.Samples.AspNetFSharp/Views/Home/Index.cshtml
+++ b/Capper.Samples.AspNetFSharp/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Select an entity variant above to read it through a cache.</p>
 </div>
